<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="422dp"
        android:layout_height="36dp"
        android:background="#FFEB3B"
        android:backgroundTint="#FFEB3B"
        android:text="@string/Kalkulator_napiwkow"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/editNum1"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:hint="@string/podaj_kwot"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#5E5656"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="LabelFor,VisualLintTextFieldSize,TextContrastCheck" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="358dp"
        android:layout_height="38dp"
        android:text="@string/wprowad_warto_napiwku_w_procentach_zap_aconej_kwoty"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/editTextNumber"
        android:layout_width="206dp"
        android:layout_height="19dp"
        android:autofillHints=""
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/czy_jedzenie_by_o_smaczne"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.577"
        tools:ignore="LabelFor,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="54dp"
        android:layout_height="18dp"
        android:layout_above="@id/seekBar"
        android:layout_centerHorizontal="true"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNum1"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintOverlap" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="286dp"
        android:layout_height="17dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Jakość obsługi:"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jakosc_obsługi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProgress"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/jakosc_obsługi"
        android:layout_width="245dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.258" />

    <Spinner
        android:id="@+id/jakosc_posiłku"
        android:layout_width="245dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.713" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="124dp"
        android:onClick="ObliczNapiwek"
        android:text="@string/oblicz_napiwek"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="158dp"
        android:layout_height="30dp"
        android:background="#4AF851"
        android:text=""
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.886"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>